--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="score"></div>
       <button id="start-button">Start Game</button>
     </div>
-    <script src="./index.js"></script>
+
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
