--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="wrapper">
       <div id="game"></div>
       <div id="score"></div>
-      <button id="start-button">Start Game</button>
+      <button id="startButton">Start Game</button>
     </div>
 
     <script src="./index.js" type="module"></script>
